[gd_scene load_steps=5 format=3 uid="uid://dh77c0hereatx"]

[ext_resource type="Script" uid="uid://cfm3u36cfnwgn" path="res://menus/settings.gd" id="1_10ddg"]
[ext_resource type="Texture2D" uid="uid://bfwa6f1dupnff" path="res://resources/materials/board/Color.jpg" id="2_20may"]
[ext_resource type="PackedScene" uid="uid://csqpumv0ochcw" path="res://menus/theme/button.tscn" id="3_iprn6"]
[ext_resource type="PackedScene" uid="uid://f2t5jmvgrm2d" path="res://menus/label_toolip.tscn" id="3_rn5ii"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10ddg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_20may")
expand_mode = 1

[node name="Divider" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85

[node name="MarginContainer" type="MarginContainer" parent="Divider"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="ClientServer" type="TabContainer" parent="Divider/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 0

[node name="Client" type="TabContainer" parent="Divider/MarginContainer/ClientServer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 0
use_hidden_tabs_for_min_size = true
metadata/_tab_index = 0

[node name="General" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Client"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2
metadata/_tab_index = 0

[node name="Language" parent="Divider/MarginContainer/ClientServer/Client/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The language of the game"
text = "Language"

[node name="LanguageValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Font" parent="Divider/MarginContainer/ClientServer/Client/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The font used in all texts. The game need to be closed for this setting to be updated."
text = "Font"

[node name="FontValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Port" parent="Divider/MarginContainer/ClientServer/Client/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The port used in TCP connection."
text = "Port"

[node name="PortValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="TerranDay" parent="Divider/MarginContainer/ClientServer/Client/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "If on, use 24h instead of 60h days."
text = "24h Day"

[node name="TerranDayValue" type="CheckButton" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
text = "On"

[node name="Dummy" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy2" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy3" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy4" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy5" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy6" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy7" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy8" type="Control" parent="Divider/MarginContainer/ClientServer/Client/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Video" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Client"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2
metadata/_tab_index = 1

[node name="Resolution" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "If your monitor resolution is not in availlable, you can force it in the settings file."
text = "Resolution"

[node name="ResolutionValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WindowType" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Screen Mode"

[node name="WindowTypeValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AntiAliasing" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Anti-aliasing"

[node name="AntiAliasingValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSync" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "V-Sync"

[node name="VSyncValue" type="CheckButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
text = "Off"

[node name="Shadows" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Shadows"

[node name="ShadowsValue" type="CheckButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
text = "Off"

[node name="WhiteLight" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Set the color of all lights to white."
text = "White Lights"

[node name="WhileLightValue" type="CheckButton" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
text = "Off"

[node name="ChunkHeight" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The number of chunks loaded by the client up and down. Doesn't affect the 9x9 chunks really loaded by the server."
text = "Chunk Height"

[node name="ChunkHeightValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="ChunkRadius" parent="Divider/MarginContainer/ClientServer/Client/Video" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The number of chunks loaded by the client around the character. Doesn't affect the 9x9 chunks really loaded by the server."
text = "Chunk Radius"

[node name="ChunkRadiusValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Client/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="Audio" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Client"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
metadata/_tab_index = 2

[node name="Input" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Client"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
metadata/_tab_index = 3

[node name="Server" type="TabContainer" parent="Divider/MarginContainer/ClientServer"]
visible = false
layout_mode = 2
tab_alignment = 1
current_tab = 0
metadata/_tab_index = 1

[node name="Gameplay" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Server"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2
metadata/_tab_index = 0

[node name="TickDuration" parent="Divider/MarginContainer/ClientServer/Server/Gameplay" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The duration of a game tick in seconds. Does not affect the client which is always 60hz."
text = "Tick Duration"

[node name="TickDurationValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="TickRate" parent="Divider/MarginContainer/ClientServer/Server/Gameplay" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The duration of a game tick in seconds. Does not affect the client which is always 60hz."
text = "Tick Rate
"

[node name="TickRateValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="BuyingPriceModifier" parent="Divider/MarginContainer/ClientServer/Server/Gameplay" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "BuyingPriceModifier"

[node name="BuyingPriceModifierValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="PauseMode" parent="Divider/MarginContainer/ClientServer/Server/Gameplay" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Determines how the game auto pause.
When no action: the game pause itself without output from all the players."
text = "Pause mode"

[node name="PauseModeValue" type="OptionButton" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy2" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy3" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy4" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy5" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy6" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy7" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy8" type="Control" parent="Divider/MarginContainer/ClientServer/Server/Gameplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="General" type="GridContainer" parent="Divider/MarginContainer/ClientServer/Server"]
visible = false
layout_mode = 2
columns = 2
metadata/_tab_index = 1

[node name="Port" parent="Divider/MarginContainer/ClientServer/Server/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "The port used in TCP connection."
text = "Port"

[node name="PortValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="WorldSeed" parent="Divider/MarginContainer/ClientServer/Server/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Seed"

[node name="WorldSeedValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="CraftSeed" parent="Divider/MarginContainer/ClientServer/Server/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Seed"

[node name="CraftSeedValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="ChoiceSeed" parent="Divider/MarginContainer/ClientServer/Server/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Seed"

[node name="ChoiceSeedValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="Password" parent="Divider/MarginContainer/ClientServer/Server/General" instance=ExtResource("3_rn5ii")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Password"

[node name="PasswordValue" type="LineEdit" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true
secret = true
secret_character = "*"

[node name="Dummy" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy2" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy3" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy4" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy5" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy6" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy7" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy8" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy9" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dummy10" type="Control" parent="Divider/MarginContainer/ClientServer/Server/General"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Divider"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
theme_override_constants/separation = 32

[node name="Save" parent="Divider/Buttons" instance=ExtResource("3_iprn6")]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="SaveAndClose" parent="Divider/Buttons" instance=ExtResource("3_iprn6")]
layout_mode = 2
size_flags_horizontal = 3
text = "Save and close"

[node name="Close" parent="Divider/Buttons" instance=ExtResource("3_iprn6")]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="Reset" parent="Divider/Buttons" instance=ExtResource("3_iprn6")]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to defaults"

[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Client/General/LanguageValue" to="." method="_on_language_value_item_selected"]
[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Client/General/FontValue" to="." method="_on_font_value_item_selected"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Client/General/PortValue" to="." method="_on_port_value_text_changed"]
[connection signal="toggled" from="Divider/MarginContainer/ClientServer/Client/General/TerranDayValue" to="." method="_on_terran_day_value_toggled"]
[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Client/Video/ResolutionValue" to="." method="_on_resolution_value_item_selected"]
[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Client/Video/WindowTypeValue" to="." method="_on_window_type_value_item_selected"]
[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Client/Video/AntiAliasingValue" to="." method="_on_anti_aliasing_value_item_selected"]
[connection signal="toggled" from="Divider/MarginContainer/ClientServer/Client/Video/VSyncValue" to="." method="_on_v_sync_value_toggled"]
[connection signal="toggled" from="Divider/MarginContainer/ClientServer/Client/Video/ShadowsValue" to="." method="_on_shadows_value_toggled"]
[connection signal="toggled" from="Divider/MarginContainer/ClientServer/Client/Video/WhileLightValue" to="." method="_on_while_light_value_toggled"]
[connection signal="text_submitted" from="Divider/MarginContainer/ClientServer/Client/Video/ChunkHeightValue" to="." method="_on_chunk_height_value_text_submitted"]
[connection signal="text_submitted" from="Divider/MarginContainer/ClientServer/Client/Video/ChunkRadiusValue" to="." method="_on_chunk_radius_value_text_submitted"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Server/Gameplay/TickDurationValue" to="." method="_on_tick_duration_value_text_changed"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Server/Gameplay/TickRateValue" to="." method="_on_tick_rate_value_text_changed"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Server/Gameplay/BuyingPriceModifierValue" to="." method="_on_buying_price_modifier_value_text_changed"]
[connection signal="item_selected" from="Divider/MarginContainer/ClientServer/Server/Gameplay/PauseModeValue" to="." method="_on_pause_mode_value_item_selected"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Server/General/PortValue" to="." method="_on_serverport_value_text_changed"]
[connection signal="text_submitted" from="Divider/MarginContainer/ClientServer/Server/General/WorldSeedValue" to="." method="_on_world_seed_value_text_submitted"]
[connection signal="text_submitted" from="Divider/MarginContainer/ClientServer/Server/General/CraftSeedValue" to="." method="_on_craft_seed_value_text_submitted"]
[connection signal="text_submitted" from="Divider/MarginContainer/ClientServer/Server/General/ChoiceSeedValue" to="." method="_on_choice_seed_value_text_submitted"]
[connection signal="text_changed" from="Divider/MarginContainer/ClientServer/Server/General/PasswordValue" to="." method="_on_password_value_text_changed"]
[connection signal="pressed" from="Divider/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Divider/Buttons/SaveAndClose" to="." method="_on_save_and_close_pressed"]
[connection signal="pressed" from="Divider/Buttons/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Divider/Buttons/Reset" to="." method="_on_reset_pressed"]
